Display selected tier

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -71,7 +71,7 @@
 	"account.total_queries": "Nombre total de cerques",
 	"account.type.label": "Nivell",
 	"account.type.stash-basic": "Compte Bàsic",
-	"account.type.stash-business": "Compte d'empresa",
+	"account.type.stash-business": "Compte de negoci",
 	"account.type.stash-developer": "Compte de desenvolupador",
 	"account.type.stash-enterprise": "Compte d'empresa",
 	"account.type.stash-startup": "Compte de startup",
@@ -99,7 +99,7 @@
 	"billing.address": "Adreça",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
-	"billing.budget_calculator": "Estimació del pressupost",
+	"billing.budget_calculator": "Calculadora de pressupost",
 	"billing.card_details": "Detalls de la targeta",
 	"billing.card_error": "No hem pogut validar la teva targeta.",
 	"billing.card_name": "Titular de la targeta",
@@ -133,7 +133,7 @@
 	"billing.free": "Gratuït",
 	"billing.hours": "hores",
 	"billing.ingestion_cost": "Costos d'ingestió",
-	"billing.ingestion_cost.description": "És proporcional al consum. Calculem el consum per nombre de paràgrafs.<br> Aquí pots fer una aproximació mensual segons les teves necessitats.",
+	"billing.ingestion_cost.description": "El càlcul dependrà del nombre de paràgrafs dels documents pujats. La calculadora de pressupost us permetrà fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Cost mensual estimat",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
@@ -162,13 +162,14 @@
 	"billing.save_continue": "Desar i Continuar",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Poseu-vos en contacte</a> amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
 	"billing.state": "Província",
+	"billing.subscribed": "Subscrit",
 	"billing.subscription.country": "Seleccioneu el país de facturació",
 	"billing.subscription.help": "Tots els plans de subscripció tenen accés a totes les funcions.",
 	"billing.subscription.show-features": "Veure totes les característiques",
 	"billing.subscription.title": "Nivells de subscripció",
+	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
-	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un ivell per obtenir informació més acurada dels costos de consum.",
-	"billing.tier_select.title": "Nivell de subscripció",
+	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
 	"billing.trial.title": "30 dies de prova",
 	"billing.upgrade": "Actualitzar",
 	"billing.vat_id": "VAT ID",
