--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -146,7 +146,7 @@
 	"billing.free": "Free",
 	"billing.hours": "hours",
 	"billing.ingestion_cost": "Ingestion costs",
-	"billing.ingestion_cost.description": "Will be proportional to consumption. We calculate consumption by number of paragraphs.<br> Here you can make a real monthly approximation according to your needs.",
+	"billing.ingestion_cost.description": "The calculation will depend on the number of paragraphs of the uploaded documents. The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.month": "Month",
 	"billing.monthly_estimation": "Monthly estimated cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
@@ -175,13 +175,14 @@
 	"billing.save_continue": "Save & Continue",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Contact us</a> if you want your data self-hosted using NucliaDB to know all payment details.",
 	"billing.state": "State",
+	"billing.subscribed": "Subscribed",
 	"billing.subscription.country": "Select the billing country",
 	"billing.subscription.help": "All subscription plans have access to all features.",
 	"billing.subscription.show-features": "See all features",
 	"billing.subscription.title": "Subscription tiers",
+	"billing.subscription_tier": "Subscription tier",
 	"billing.success": "Successful subscription",
 	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
-	"billing.tier_select.title": "Tier of subscription",
 	"billing.trial.title": "30 days trial",
 	"billing.upgrade": "Upgrade",
 	"billing.vat_id": "VAT ID",
