--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -99,7 +99,7 @@
 	"billing.address": "Dirección",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
-	"billing.budget_calculator": "Estimación del presupuesto",
+	"billing.budget_calculator": "Calculadora de presupuesto",
 	"billing.card_details": "Detalles de la tarjeta",
 	"billing.card_error": "No pudimos validar tu tarjeta.",
 	"billing.card_name": "Titular de la tarjeta",
@@ -133,7 +133,7 @@
 	"billing.free": "Gratuito",
 	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
-	"billing.ingestion_cost.description": "Es proporcional al consumo. Calculamos el consumo por número de párrafos.<br> Aquí puedes hacer una aproximación mensual según tus necesidades.",
+	"billing.ingestion_cost.description": "El cálculo dependerá del número de párrafos de los documentos subidos. La calculadora de presupuesto te permitirá hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Coste mensual estimado",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
@@ -162,13 +162,14 @@
 	"billing.save_continue": "Guardar y Continuar",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Póngase en contacto</a> con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
 	"billing.state": "Provincia",
+	"billing.subscribed": "Suscrito",
 	"billing.subscription.country": "Seleccione el país de facturación",
 	"billing.subscription.help": "Todos los planes de suscripción tienen acceso a todas las funciones.",
 	"billing.subscription.show-features": "Ver todas las funciones",
 	"billing.subscription.title": "Niveles de subscripción",
+	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
 	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
-	"billing.tier_select.title": "Nivel de suscripción",
 	"billing.trial.title": "30 días de prueba",
 	"billing.upgrade": "Actualizar",
 	"billing.vat_id": "VAT ID",
