Allow customers without company

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -104,8 +104,10 @@
 	"billing.card_error": "No hem pogut validar la teva targeta.",
 	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
-	"billing.company": "Empresa",
+	"billing.company": "Raó social de l'empresa",
+	"billing.company_address": "Adreça de l'empresa",
 	"billing.contact": "Contactar",
+	"billing.contact_name": "Persona de contacte",
 	"billing.cost_per_usage": "Cost per ús",
 	"billing.cost_per_usage.description": "Si supereu els límits, s'aplicarà el cost per ús.",
 	"billing.country": "País",
@@ -137,6 +139,7 @@
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Cost mensual estimat",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
+	"billing.not_company": "No soc una empresa",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
 	"billing.parameter.qa": "Quantes respostes generatives?",
@@ -144,6 +147,8 @@
 	"billing.parameter.training-hours": "Quantes hores d'entrenament?",
 	"billing.payment_details": "Dades de pagament",
 	"billing.payment_method": "Mètode de pagament",
+	"billing.phone": "Número de telèfon",
+	"billing.phone.help": "e.g. +34 000 000 000",
 	"billing.postal_code": "Còdi postal",
 	"billing.quotas": "Quotes mensuals",
 	"billing.quotas.answers": "Resposta generativa",
