--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -104,8 +104,10 @@
 	"billing.card_error": "No pudimos validar tu tarjeta.",
 	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
-	"billing.company": "Empresa",
+	"billing.company": "Razon social de la empresa",
+	"billing.company_address": "Dirección de la empresa",
 	"billing.contact": "Contactar",
+	"billing.contact_name": "Persona de contacto",
 	"billing.cost_per_usage": "Coste por uso",
 	"billing.cost_per_usage.description": "Si excede los límites, se aplicará el costo por uso.",
 	"billing.country": "País",
@@ -137,6 +139,7 @@
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Coste mensual estimado",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
+	"billing.not_company": "No soy una empresa",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
 	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
@@ -144,6 +147,8 @@
 	"billing.parameter.training-hours": "¿Cuántas horas de entrenamientos?",
 	"billing.payment_details": "Datos de pago",
 	"billing.payment_method": "Método de pago",
+	"billing.phone": "Número de teléfono",
+	"billing.phone.help": "e.g. +34 000 000 000",
 	"billing.postal_code": "Código postal",
 	"billing.quotas": "Cuotas mensuales",
 	"billing.quotas.answers": "Respuesta generativa",
