--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -117,8 +117,10 @@
 	"billing.card_error": "We were unable to validate your card.",
 	"billing.card_name": "Name on card",
 	"billing.city": "City",
-	"billing.company": "Company",
+	"billing.company": "Company legal name",
+	"billing.company_address": "Company address",
 	"billing.contact": "Contact",
+	"billing.contact_name": "Contact name",
 	"billing.cost_per_usage": "Cost-per-usage",
 	"billing.cost_per_usage.description": "If you exceed the limits, cost per usage will be applied.",
 	"billing.country": "Country",
@@ -150,6 +152,7 @@
 	"billing.month": "Month",
 	"billing.monthly_estimation": "Monthly estimated cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
+	"billing.not_company": "I'm not a company",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.media": "How many hours of videos/audios?",
 	"billing.parameter.qa": "How many generative answers?",
@@ -157,6 +160,8 @@
 	"billing.parameter.training-hours": "How many hours of training?",
 	"billing.payment_details": "Payment details",
 	"billing.payment_method": "Payment method",
+	"billing.phone": "Phone number",
+	"billing.phone.help": "e.g. +34 000 000 000",
 	"billing.postal_code": "ZIP",
 	"billing.quotas": "Monthly quotas",
 	"billing.quotas.answers": "Generative answer",
