[sc-5055] Payment Improvements (#704)
* Improve calculator

* Add enterprise tier info

* Add review modal

* Add review modal

* Add email field

* Add card authentication

* Display selected tier

* Allow customers without company

* Fixes

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -71,7 +71,7 @@
 	"account.total_queries": "Nombre total de cerques",
 	"account.type.label": "Nivell",
 	"account.type.stash-basic": "Compte Bàsic",
-	"account.type.stash-business": "Compte d'empresa",
+	"account.type.stash-business": "Compte de negoci",
 	"account.type.stash-developer": "Compte de desenvolupador",
 	"account.type.stash-enterprise": "Compte d'empresa",
 	"account.type.stash-startup": "Compte de startup",
@@ -97,18 +97,23 @@
 	"autocomplete.section.next_words": "Paraules suggerides",
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
 	"billing.address": "Adreça",
+	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
-	"billing.budget_calculator": "Estimació del pressupost",
+	"billing.budget_calculator": "Calculadora de pressupost",
 	"billing.card_details": "Detalls de la targeta",
+	"billing.card_error": "No hem pogut validar la teva targeta.",
 	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
-	"billing.company": "Empresa",
+	"billing.company": "Raó social de l'empresa",
+	"billing.company_address": "Adreça de l'empresa",
 	"billing.contact": "Contactar",
+	"billing.contact_name": "Persona de contacte",
 	"billing.cost_per_usage": "Cost per ús",
 	"billing.cost_per_usage.description": "Si supereu els límits, s'aplicarà el cost per ús.",
 	"billing.country": "País",
 	"billing.custom_plan": "Pla personalitzat",
-	"billing.customized_plan": "Si sou una start-up o necessiteu ampliar i personalitzar un pla per al vostre negoci, no dubteu a posar-vos en contacte amb nosaltres.",
+	"billing.email": "Factures enviades a",
+	"billing.enterprise_ready": "Llest par a l'empresa",
 	"billing.estimate_cost": "Estima el teu cost",
 	"billing.features.anon": "Anonimat de dades",
 	"billing.features.apikey": "Clau d'API autoallotjada",
@@ -130,18 +135,20 @@
 	"billing.free": "Gratuït",
 	"billing.hours": "hores",
 	"billing.ingestion_cost": "Costos d'ingestió",
-	"billing.ingestion_cost.description": "És proporcional al consum. Calculem el consum per nombre de paràgrafs.<br> Aquí pots fer una aproximació mensual segons les teves necessitats.",
+	"billing.ingestion_cost.description": "El càlcul dependrà del nombre de paràgrafs dels documents pujats. La calculadora de pressupost us permetrà fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Cost mensual estimat",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
+	"billing.not_company": "No soc una empresa",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
 	"billing.parameter.qa": "Quantes respostes generatives?",
 	"billing.parameter.searches": "Quantes cerques?",
 	"billing.parameter.training-hours": "Quantes hores d'entrenament?",
 	"billing.payment_details": "Dades de pagament",
-	"billing.payment_details.description": "El pagament no es farà efectiu fins a finals de mes en funció del vostre ús.",
 	"billing.payment_method": "Mètode de pagament",
+	"billing.phone": "Número de telèfon",
+	"billing.phone.help": "e.g. +34 000 000 000",
 	"billing.postal_code": "Còdi postal",
 	"billing.quotas": "Quotes mensuals",
 	"billing.quotas.answers": "Resposta generativa",
@@ -151,15 +158,23 @@
 	"billing.quotas.searches": "Recerques",
 	"billing.quotas.training": "Formació",
 	"billing.quotas.up-to": "Fins a",
+	"billing.review.confirm_subscription": "Confirma la teva subscripció",
+	"billing.review.cost": "Subscripció mensual de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
+	"billing.review.subscribe_to": "T'estàs subscribint a {{account}}",
+	"billing.review.title": "Revisa la teva subscripció",
+	"billing.review_confirm": "Revisar i confirmar",
 	"billing.save_budget": "Guardar límit de pressupost",
 	"billing.save_continue": "Desar i Continuar",
-	"billing.self_hosted": "Poseu-vos en contacte amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
+	"billing.self_hosted": "<a href=\"{{ url }}\">Poseu-vos en contacte</a> amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
 	"billing.state": "Província",
+	"billing.subscribed": "Subscrit",
 	"billing.subscription.country": "Seleccioneu el país de facturació",
 	"billing.subscription.help": "Tots els plans de subscripció tenen accés a totes les funcions.",
 	"billing.subscription.show-features": "Veure totes les característiques",
 	"billing.subscription.title": "Nivells de subscripció",
+	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
+	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
 	"billing.trial.title": "30 dies de prova",
 	"billing.upgrade": "Actualitzar",
 	"billing.vat_id": "VAT ID",
