--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -108,20 +108,25 @@
 	"autocomplete.section.next_words": "Suggested words",
 	"autocomplete.section.paragraph": "Suggested paragraph",
 	"billing.address": "Address",
+	"billing.assistance": "Please, <a href=\"{{url}}\">contact us</a> for assistance.",
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.card_details": "Card details",
+	"billing.card_error": "We were unable to validate your card.",
 	"billing.card_name": "Name on card",
 	"billing.city": "City",
-	"billing.company": "Company",
-	"billing.contact": "Contact us",
+	"billing.company": "Company legal name",
+	"billing.company_address": "Company address",
+	"billing.contact": "Contact",
+	"billing.contact_name": "Contact name",
 	"billing.cost_per_usage": "Cost-per-usage",
 	"billing.cost_per_usage.description": "If you exceed the limits, cost per usage will be applied.",
 	"billing.country": "Country",
 	"billing.custom_plan": "Custom plan",
-	"billing.customized_plan": "If you are a start up or you need to expand and customize a plan for your business, please do not hesitate to contact us. ",
+	"billing.email": "Invoices sent to",
+	"billing.enterprise_ready": "We are enterprise ready",
 	"billing.estimate_cost": "Estimate your cost",
 	"billing.features.anon": "Data Anonymization",
 	"billing.features.apikey": "Self-hosted API key",
@@ -143,18 +148,20 @@
 	"billing.free": "Free",
 	"billing.hours": "hours",
 	"billing.ingestion_cost": "Ingestion costs",
-	"billing.ingestion_cost.description": "Will be proportional to consumption. We calculate consumption by number of paragraphs.<br> Here you can make a real monthly approximation according to your needs.",
+	"billing.ingestion_cost.description": "The calculation will depend on the number of paragraphs of the uploaded documents. The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.month": "Month",
 	"billing.monthly_estimation": "Monthly estimated cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
+	"billing.not_company": "I'm not a company",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.media": "How many hours of videos/audios?",
 	"billing.parameter.qa": "How many generative answers?",
 	"billing.parameter.searches": "How many searches?",
 	"billing.parameter.training-hours": "How many hours of training?",
 	"billing.payment_details": "Payment details",
-	"billing.payment_details.description": "Your payment method will not be billed until the end of the month based on your usage.",
 	"billing.payment_method": "Payment method",
+	"billing.phone": "Phone number",
+	"billing.phone.help": "e.g. +34 000 000 000",
 	"billing.postal_code": "ZIP",
 	"billing.quotas": "Monthly quotas",
 	"billing.quotas.answers": "Generative answer",
@@ -164,15 +171,23 @@
 	"billing.quotas.searches": "Searches",
 	"billing.quotas.training": "Training",
 	"billing.quotas.up-to": "Up to",
+	"billing.review.confirm_subscription": "Confirm your subscription",
+	"billing.review.cost": "Monthly {{cost}} subscription + consumption costs with a monthly budget restriction of {{budget}}",
+	"billing.review.subscribe_to": "Subscribing to {{account}}",
+	"billing.review.title": "Review your subscription",
+	"billing.review_confirm": "Review & Confirm",
 	"billing.save_budget": "Save as budget limit",
 	"billing.save_continue": "Save & Continue",
-	"billing.self_hosted": "Contact us if you want your data self-hosted using NucliaDB to know all payment details.",
+	"billing.self_hosted": "<a href=\"{{ url }}\">Contact us</a> if you want your data self-hosted using NucliaDB to know all payment details.",
 	"billing.state": "State",
+	"billing.subscribed": "Subscribed",
 	"billing.subscription.country": "Select the billing country",
 	"billing.subscription.help": "All subscription plans have access to all features.",
 	"billing.subscription.show-features": "See all features",
 	"billing.subscription.title": "Subscription tiers",
+	"billing.subscription_tier": "Subscription tier",
 	"billing.success": "Successful subscription",
+	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
 	"billing.trial.title": "30 days trial",
 	"billing.upgrade": "Upgrade",
 	"billing.vat_id": "VAT ID",
