--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -97,18 +97,23 @@
 	"autocomplete.section.next_words": "Palabras sugeridas",
 	"autocomplete.section.paragraph": "Párrafo sugerido",
 	"billing.address": "Dirección",
+	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
-	"billing.budget_calculator": "Estimación del presupuesto",
+	"billing.budget_calculator": "Calculadora de presupuesto",
 	"billing.card_details": "Detalles de la tarjeta",
+	"billing.card_error": "No pudimos validar tu tarjeta.",
 	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
-	"billing.company": "Empresa",
+	"billing.company": "Razon social de la empresa",
+	"billing.company_address": "Dirección de la empresa",
 	"billing.contact": "Contactar",
+	"billing.contact_name": "Persona de contacto",
 	"billing.cost_per_usage": "Coste por uso",
 	"billing.cost_per_usage.description": "Si excede los límites, se aplicará el costo por uso.",
 	"billing.country": "País",
 	"billing.custom_plan": "Plan personalizado",
-	"billing.customized_plan": "Si eres una start up o necesitas ampliar y personalizar un plan para tu negocio, no dudes en contactarnos.",
+	"billing.email": "Facturas enviadas a",
+	"billing.enterprise_ready": "Listo para la empresa",
 	"billing.estimate_cost": "Estima tu coste",
 	"billing.features.anon": "Anonimización de datos",
 	"billing.features.apikey": "Clave de API autohospedada",
@@ -130,18 +135,20 @@
 	"billing.free": "Gratuito",
 	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
-	"billing.ingestion_cost.description": "Es proporcional al consumo. Calculamos el consumo por número de párrafos.<br> Aquí puedes hacer una aproximación mensual según tus necesidades.",
+	"billing.ingestion_cost.description": "El cálculo dependerá del número de párrafos de los documentos subidos. La calculadora de presupuesto te permitirá hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Coste mensual estimado",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
+	"billing.not_company": "No soy una empresa",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
 	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
 	"billing.parameter.searches": "¿Cuántas búsquedas?",
 	"billing.parameter.training-hours": "¿Cuántas horas de entrenamientos?",
 	"billing.payment_details": "Datos de pago",
-	"billing.payment_details.description": "El pago no se hará efectivo hasta finales de mes en función del uso realizado.",
 	"billing.payment_method": "Método de pago",
+	"billing.phone": "Número de teléfono",
+	"billing.phone.help": "e.g. +34 000 000 000",
 	"billing.postal_code": "Código postal",
 	"billing.quotas": "Cuotas mensuales",
 	"billing.quotas.answers": "Respuesta generativa",
@@ -151,15 +158,23 @@
 	"billing.quotas.searches": "Búsquedas",
 	"billing.quotas.training": "Capacitación",
 	"billing.quotas.up-to": "Hasta",
+	"billing.review.confirm_subscription": "Confirma tu suscripción",
+	"billing.review.cost": "Suscripción mensual de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
+	"billing.review.subscribe_to": "Te estás suscribiendo a {{account}}",
+	"billing.review.title": "Revisa tu suscripción",
+	"billing.review_confirm": "Revisar y confirmar",
 	"billing.save_budget": "Guardar límite de presupuesto",
 	"billing.save_continue": "Guardar y Continuar",
-	"billing.self_hosted": "Póngase en contacto con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
+	"billing.self_hosted": "<a href=\"{{ url }}\">Póngase en contacto</a> con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
 	"billing.state": "Provincia",
+	"billing.subscribed": "Suscrito",
 	"billing.subscription.country": "Seleccione el país de facturación",
 	"billing.subscription.help": "Todos los planes de suscripción tienen acceso a todas las funciones.",
 	"billing.subscription.show-features": "Ver todas las funciones",
 	"billing.subscription.title": "Niveles de subscripción",
+	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
+	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
 	"billing.trial.title": "30 días de prueba",
 	"billing.upgrade": "Actualizar",
 	"billing.vat_id": "VAT ID",
