--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -100,6 +100,8 @@
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
+	"billing.budget_description": "Para evitar gastos excesivos y cargos inesperados, recomendamos establecer un límite mensual.",
+	"billing.budget_note": "* Tenga en cuenta que, a veces, un proceso que se inicia justo antes de alcanzar su límite aún puede completarse, lo que podría provocar un ligero aumento en el límite establecido.",
 	"billing.card_details": "Detalles de la tarjeta",
 	"billing.card_error": "No pudimos validar tu tarjeta.",
 	"billing.card_name": "Titular de la tarjeta",
