[sc-5222] UI Improvements on the payment flow (#717)
* Display defaults from accounts_types endpoint

* Change icon colors

* Add option to user menu

* Remove button to show features

* Prevent country field change once customer data is saved

* Change budget form text

* Remove empty space below modals

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -100,6 +100,8 @@
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Calculadora de pressupost",
+	"billing.budget_description": "Per evitar despeses excessives i càrrecs inesperats, recomanem establir un límit mensual.",
+	"billing.budget_note": "* Tingueu en compte que, de vegades, un procés que s'inicia just abans d'arribar al seu límit encara es pot completar, la qual cosa pot provocar un lleuger augment del límit establert.",
 	"billing.card_details": "Detalls de la targeta",
 	"billing.card_error": "No hem pogut validar la teva targeta.",
 	"billing.card_name": "Titular de la targeta",
@@ -170,7 +172,6 @@
 	"billing.subscribed": "Subscrit",
 	"billing.subscription.country": "Seleccioneu el país de facturació",
 	"billing.subscription.help": "Tots els plans de subscripció tenen accés a totes les funcions.",
-	"billing.subscription.show-features": "Veure totes les característiques",
 	"billing.subscription.title": "Nivells de subscripció",
 	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
