Recover budget form text

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -112,8 +112,7 @@
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
-	"billing.budget_description": "To avoid overspending an unexpected charges, we recommend setting a monthly economic limit.",
-	"billing.budget_note": "* Please note that sometimes a process that is started just before reaching its limit may still be completed, which could lead to a slight increase in the set limit.",
+	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.card_details": "Card details",
 	"billing.card_error": "We were unable to validate your card.",
 	"billing.card_name": "Name on card",
