--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -100,8 +100,7 @@
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
-	"billing.budget_description": "Para evitar gastos excesivos y cargos inesperados, recomendamos establecer un límite mensual.",
-	"billing.budget_note": "* Tenga en cuenta que, a veces, un proceso que se inicia justo antes de alcanzar su límite aún puede completarse, lo que podría provocar un ligero aumento en el límite establecido.",
+	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
 	"billing.card_details": "Detalles de la tarjeta",
 	"billing.card_error": "No pudimos validar tu tarjeta.",
 	"billing.card_name": "Titular de la tarjeta",
